<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainPageActivity.AboutDeveloper">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nes1">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_icon"
            android:tint="@color/green1"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:background="@android:color/transparent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/corn_logo"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nes1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/r1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/man"
                android:padding="8dp"
                android:background="@drawable/circle_back"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                android:layout_gravity="center"
                android:contentDescription="@string/userimage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/name"
                android:textColor="@color/green1"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/yourName"
                android:textSize="18sp"
                android:textColor="@color/green1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/github"
                android:textColor="@color/green1"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/githubLink"
                android:textColorLink="@color/green1"
                android:textSize="18sp"
                android:textColor="@color/green1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/web"
                android:textColor="@color/green1"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/website"
                android:textSize="18sp"
                android:textColorLink="@color/green1"
                android:textColor="@color/green1"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>