<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CercosporaActivity"
    android:background="@color/green1">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gray_leaf_spot"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/diseaseName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/diseaseName"
                android:text="@string/gray_leaf_spot_cause"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:id="@+id/cause"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manage"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/manage"
                android:layout_below="@id/cause"/>

            <TextView
                android:id="@+id/managementStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/manage"
                android:text="@string/mangeStat"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sym"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/sym"
                android:layout_below="@id/managementStat"/>

            <TextView
                android:id="@+id/symDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sym"
                android:text="@string/symDesc"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:textSize="15sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/images"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/images"
                android:layout_below="@id/symDes"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/images"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:weightSum="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/gray_spot_1"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/gray_spot_2"/>

            </LinearLayout>

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>